Closed
Bug 1145934
Opened 6 years ago
Closed 6 years ago
"ASSERTION: Glyphruns not coalesced?" with writing-mode
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
RESOLVED
FIXED
mozilla39
Tracking | Status | |
---|---|---|
firefox39 | --- | fixed |
People
(Reporter: jruderman, Assigned: jfkthame)
References
(Blocks 3 open bugs)
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
###!!! ASSERTION: Glyphruns not coalesced?: 'font != lastFont', file gfx/thebes/gfxTextRun.cpp, line 1238 The testcase a private-use-area character that Firefox shows a hexbox.
Reporter | ||
Comment 1•6 years ago
|
||
Assignee | ||
Comment 2•6 years ago
|
||
This is a case where the assertion is wrong; it doesn't check all the conditions that may legitimately cause a break in the glyph runs.
Assignee | ||
Comment 3•6 years ago
|
||
Attachment #8581102 -
Flags: review?(jdaggett)
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Updated•6 years ago
|
Attachment #8581102 -
Flags: review?(jdaggett) → review+
Assignee | ||
Comment 4•6 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/950b3418cbf9
https://hg.mozilla.org/mozilla-central/rev/950b3418cbf9
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in
before you can comment on or make changes to this bug.
Description
•