Bug 1145934 - Update obsolete glyph-run assertion. r=jdaggett